test/tests/stages/16_characters_and_strings/valid/strings_as_lvalues/cast_string_pointer.parse
-- Lexing ... OK
-- Parsing ... OK
+
+
@@ C AST @@
CProgram: 
  List[1]: 
    CFunDecl: 
      CFunctionDeclaration: 
        TIdentifier: main
        List[0]: 
        CB: 
          List[6]: 
            CD: 
              CVarDecl: 
                CVariableDeclaration: 
                  TIdentifier: c
                  CSingleInit: 
                    CString: 
                      CStringLiteral: 
                        List[17]: 
                          TChar: 84
                          TChar: 104
                          TChar: 105
                          TChar: 115
                          TChar: 32
                          TChar: 105
                          TChar: 115
                          TChar: 32
                          TChar: 97
                          TChar: 32
                          TChar: 115
                          TChar: 116
                          TChar: 114
                          TChar: 105
                          TChar: 110
                          TChar: 103
                          TChar: 33
                      None: 
                    None: 
                  Pointer: 
                    Char: 
                  None: 
            CD: 
              CVarDecl: 
                CVariableDeclaration: 
                  TIdentifier: uc
                  CSingleInit: 
                    CCast: 
                      CVar: 
                        TIdentifier: c
                        None: 
                      Pointer: 
                        UChar: 
                      None: 
                    None: 
                  Pointer: 
                    UChar: 
                  None: 
            CS: 
              CIf: 
                CBinary: 
                  CNotEqual: 
                  CSubscript: 
                    CVar: 
                      TIdentifier: uc
                      None: 
                    CConstant: 
                      CConstInt: 
                        TInt: 3
                      None: 
                    None: 
                  CConstant: 
                    CConstInt: 
                      TInt: 115
                    None: 
                  None: 
                CCompound: 
                  CB: 
                    List[1]: 
                      CS: 
                        CReturn: 
                          CConstant: 
                            CConstInt: 
                              TInt: 1
                            None: 
                None: 
            CD: 
              CVarDecl: 
                CVariableDeclaration: 
                  TIdentifier: sc
                  CSingleInit: 
                    CCast: 
                      CVar: 
                        TIdentifier: c
                        None: 
                      Pointer: 
                        SChar: 
                      None: 
                    None: 
                  Pointer: 
                    SChar: 
                  None: 
            CS: 
              CIf: 
                CBinary: 
                  CNotEqual: 
                  CSubscript: 
                    CVar: 
                      TIdentifier: sc
                      None: 
                    CConstant: 
                      CConstInt: 
                        TInt: 3
                      None: 
                    None: 
                  CConstant: 
                    CConstInt: 
                      TInt: 115
                    None: 
                  None: 
                CCompound: 
                  CB: 
                    List[1]: 
                      CS: 
                        CReturn: 
                          CConstant: 
                            CConstInt: 
                              TInt: 2
                            None: 
                None: 
            CS: 
              CReturn: 
                CConstant: 
                  CConstInt: 
                    TInt: 0
                  None: 
        FunType: 
          TULong: 67108864
          TULong: 67108864
          List[0]: 
          Int: 
        None: 
