test/tests/stages/16_characters_and_strings/invalid_types/string_initializer_too_long_static.parse
-- Lexing ... OK
-- Parsing ... OK
+
+
@@ C AST @@
CProgram: 
  List[1]: 
    CFunDecl: 
      CFunctionDeclaration: 
        TIdentifier: main
        List[0]: 
        CB: 
          List[2]: 
            CD: 
              CVarDecl: 
                CVariableDeclaration: 
                  TIdentifier: too_long
                  CSingleInit: 
                    CString: 
                      CStringLiteral: 
                        List[4]: 
                          TChar: 97
                          TChar: 98
                          TChar: 99
                          TChar: 100
                      None: 
                    None: 
                  Array: 
                    TLong: 3
                    Char: 
                  CStatic: 
            CS: 
              CReturn: 
                CConstant: 
                  CConstInt: 
                    TInt: 0
                  None: 
        FunType: 
          TULong: 67108864
          TULong: 67108864
          List[0]: 
          Int: 
        None: 
